# RL

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
assets/irb120/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  model.urdf  tool.stl
configs/: experiment.yaml  experiment_dac.yaml  experiment_irb120.yaml  experiment_irb120_dac.yaml  experiment_stability_strong.yaml
docs/: experiment_chapter.md  report.md  reproduction.md
runs/results/: TD3_HER_CURRICULUM_STABILITY_STRONG_fixed_medium_episodes.csv  TD3_HER_CURRICULUM_STABILITY_STRONG_fixed_medium_summary.json  TD3_HER_CURRICULUM_STABILITY_STRONG_random_medium_episodes.csv  TD3_HER_CURRICULUM_STABILITY_STRONG_random_medium_summary.json  TD3_HER_CURRICULUM_fixed_60k_medium_episodes.csv  TD3_HER_CURRICULUM_fixed_60k_medium_hold_episodes.csv  TD3_HER_CURRICULUM_fixed_60k_medium_hold_summary.json  TD3_HER_CURRICULUM_fixed_60k_medium_summary.json  TD3_HER_CURRICULUM_random_medium_beta01_episodes.csv  TD3_HER_CURRICULUM_random_medium_beta01_summary.json  TD3_HER_CURRICULUM_random_medium_episodes.csv  TD3_HER_CURRICULUM_random_medium_filtered_episodes.csv  TD3_HER_CURRICULUM_random_medium_filtered_summary.json  TD3_HER_CURRICULUM_random_medium_servo_episodes.csv  TD3_HER_CURRICULUM_random_medium_servo_summary.json  TD3_HER_CURRICULUM_random_medium_summary.json  ablation_new_medium.csv  (+20 more)
scripts/: evaluate_all.sh  generate_panda_position_groups.py  generate_project_images.py  run_experiments_parallel.sh  run_ik_variants.sh  train_all.sh
中期答辩材料/: 中期答辩的进展报告.md
(+40 files in other folders)
